--- a/manifest.json
+++ b/manifest.json
@@ -5,22 +5,5 @@
     "start_url": "/signup",
     "orientation":"portrait",
     "background_color": "#ccc",
-    "theme_color":"#f24216",
-    "icons": [
-        {
-            "src": "/images/96.png",
-            "sizes": "96x96",
-            "type": "image/png"
-        },
-        {
-            "src": "/images/144.png",
-            "sizes": "144x144",
-            "type": "image/png"
-        },
-        {
-            "src": "/images/178.png",
-            "sizes": "178x178",
-            "type": "image/png"
-        }
-    ]
+    "theme_color":"#f24216"
 }
