--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "RSS TVNDR APP",
     "short_name": "RSS TVNDR",
     "display":"standalone",
-    "start_url": "/signup",
+    "start_url": "/index.html",
     "orientation":"portrait",
     "background_color": "#ccc",
     "theme_color":"#f24216",
@@ -10,17 +10,17 @@
         {
             "src": "/images/96.png",
             "sizes": "96x96",
-            "type": "image/png"
+            "type": "/image/png"
         },
         {
             "src": "/images/144.png",
             "sizes": "144x144",
-            "type": "image/png"
+            "type": "/image/png"
         },
         {
             "src": "/images/178.png",
             "sizes": "178x178",
-            "type": "image/png"
+            "type": "/image/png"
         }
     ]
 }
