--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
         
         }],
     "start_url": "/",
+    "scope":"/",
     "display": "standalone",
     "orientation" : "portrait",
     "background_color": "#FFFFFF",
